--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
 <!-- Head BEGIN -->
 <head>
 <meta charset="utf-8">
-<title>hahaha</title>
+<title>Frupple</title>
 
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -58,26 +58,7 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
 <!--DOC: menu-always-on-top class to the body element to set menu on top -->
 <body class="menu-always-on-top">
     <!-- BEGIN STYLE CUSTOMIZER -->
-    <div class="color-panel">
-        <div class="color-mode-icons icon-color"></div>
-        <div class="color-mode-icons icon-color-close"></div>
-        <div class="color-mode">
-            <p>THEME COLOR</p>
-            <ul class="inline">
-                <li class="color-red current color-default" data-style="red"></li>
-                <li class="color-blue" data-style="blue"></li>
-                <li class="color-green" data-style="green"></li>
-                <li class="color-orange" data-style="orange"></li>
-                <li class="color-gray" data-style="gray"></li>
-                <li class="color-turquoise" data-style="turquoise"></li>
-            </ul>
-            <p>MENU POSITION</p>
-            <select class="form-control menu-pos">
-                <option value="bottom">Bottom</option>
-                <option value="top">Top</option>
-            </select>
-        </div>
-    </div>
+    
     <!-- END BEGIN STYLE CUSTOMIZER -->
 
     <!-- Header BEGIN -->
