--- a/index.html
+++ b/index.html
@@ -231,33 +231,45 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
             <div class="row">
                 <div class="col-md-4 item">
                     <img src="assets/onepage/img/people/img6-large.jpg" alt="Marcus Doe" class="img-responsive">
-                    <h3>Marcus Doe</h3>
-                    <em>Founder</em>
+                    <h3>Awish</h3>
+                    <em>Project Manager / Game Designer / 3D Artist</em>
                     <p>Lorem ipsum dolor amet, tempor ut labore magna tempor dolore</p>
                     <div class="tb-socio">
-                        <a href="javascript:void(0);" class="fa fa-facebook"></a>
+                        <a href="https://www.facebook.com/permanent.system" target="_blank" class="fa fa-facebook"></a>
                         <a href="javascript:void(0);" class="fa fa-twitter"></a>
                         <a href="javascript:void(0);" class="fa fa-google-plus"></a>
                     </div>
                 </div>
                 <div class="col-md-4 item">
                     <img src="assets/onepage/img/people/img7-large.jpg" alt="Elena Taylor" class="img-responsive">
-                    <h3>Elena Taylor</h3>
-                    <em>Designer</em>
+                    <h3>Shafiq Izwan</h3>
+                    <em>Technical Manager / Lead Programmer</em>
                     <p>Lorem ipsum dolor amet, tempor ut labore magna tempor dolore</p>
                     <div class="tb-socio">
-                        <a href="javascript:void(0);" class="fa fa-facebook"></a>
+                        <a href="https://www.facebook.com/shafiqizwan2020" target="_blank" class="fa fa-facebook"></a>
                         <a href="javascript:void(0);" class="fa fa-twitter"></a>
                         <a href="javascript:void(0);" class="fa fa-google-plus"></a>
                     </div>
                 </div>
                 <div class="col-md-4 item">
                     <img src="assets/onepage/img/people/img8-large.jpg" alt="Cris Nilson" class="img-responsive">
-                    <h3>Cris Nilson</h3>
-                    <em>Developer</em>
+                    <h3>Kimi</h3>
+                    <em>Business Model Analyst / Web Develepor</em>
                     <p>Lorem ipsum dolor amet, tempor ut labore magna tempor dolore</p>
                     <div class="tb-socio">
-                        <a href="javascript:void(0);" class="fa fa-facebook"></a>
+                        <a href="https://www.facebook.com/harizhakimie" target="_blank" class="fa fa-facebook"></a>
+                        <a href="javascript:void(0);" class="fa fa-twitter"></a>
+                        <a href="javascript:void(0);" class="fa fa-google-plus"></a>
+                    </div>
+                </div>
+
+                <div class="col-md-4 item">
+                    <img src="assets/onepage/img/people/img8-large.jpg" alt="Cris Nilson" class="img-responsive">
+                    <h3>Amir Imran</h3>
+                    <em>Business Model Analyst / Programmer</em>
+                    <p>Lorem ipsum dolor amet, tempor ut labore magna tempor dolore</p>
+                    <div class="tb-socio">
+                        <a href="https://www.facebook.com/amir.imran.mk" target="_blank" class="fa fa-facebook"></a>
                         <a href="javascript:void(0);" class="fa fa-twitter"></a>
                         <a href="javascript:void(0);" class="fa fa-google-plus"></a>
                     </div>
