Remove some part.
Remove blocks.

--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
     <!-- Message block BEGIN -->
     <div class="message-block content content-center valign-center" id="message-block">
         <div class="valign-center-elem">
-            <h2>The details are not the details <strong>They make the design</strong></h2>
-            <em>KEEN THEMES</em>
+            <h2>In Progress <strong>Play Our Game Soon!</strong></h2>
+            <em>frupple team</em>
         </div>
     </div>
     <!-- Message block END -->
@@ -506,18 +506,7 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
     <!-- Choose us block END -->
 
     <!-- Checkout block BEGIN -->
-    <div class="checkout-block content">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-10">
-          <h2>CHECK OUT ADMIN THEME! <em>Most Full Featured &amp; Powerfull Admin Theme</em></h2>
-        </div>
-        <div class="col-md-2 text-right">
-          <a href="http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes&amp;utm_source=download&amp;utm_medium=banner&amp;utm_campaign=metronic_frontend_freebie" target="_blank" class="btn btn-primary">Live preview</a>
-        </div>
-      </div>
-    </div>
-    </div>
+   
     <!-- Checkout block END -->
 
     <!-- Facts block BEGIN -->
@@ -780,7 +769,7 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
             <div class="row">
                 <!-- BEGIN COPYRIGHT -->
                 <div class="col-md-6 col-sm-6">
-                    <div class="copyright">2014 © Metronic One Page. ALL Rights Reserved.</div>
+                    <div class="copyright">2016 © Frupple. ALL Rights Reserved.</div>
                 </div>
                 <!-- END COPYRIGHT -->
                 <!-- BEGIN SOCIAL ICONS -->
