--- a/index.html
+++ b/index.html
@@ -264,6 +264,10 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
                 </div>
 
                 <div class="col-md-4 item">
+                    
+                </div>
+
+                <div class="col-md-4 item">
                     <img src="assets/onepage/img/people/img8-large.jpg" alt="Cris Nilson" class="img-responsive">
                     <h3>Amir Imran</h3>
                     <em>Business Model Analyst / Programmer</em>
