--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
                 <div class="col-md-4 item">
                     <img src="assets/onepage/img/people/img8-large.jpg" alt="Cris Nilson" class="img-responsive">
                     <h3>Kimi</h3>
-                    <em>Business Model Analyst / Web Develepor</em>
+                    <em>Business Model Analyst / Web Developer</em>
                     <p>Lorem ipsum dolor amet, tempor ut labore magna tempor dolore</p>
                     <div class="tb-socio">
                         <a href="https://www.facebook.com/harizhakimie" target="_blank" class="fa fa-facebook"></a>
