--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
             <h4>Lorem ipsum dolor sit amet, consectetuer adipiscing elit</h4>
             <div class="row">
                 <div class="col-md-4 item">
-                    <img src="assets/onepage/img/people/img6-large.jpg" alt="Marcus Doe" class="img-responsive">
+                    <img src="assets/onepage/img/people/awish.jpg" alt="Awish" class="img-responsive">
                     <h3>Awish</h3>
                     <em>Project Manager / Game Designer / 3D Artist</em>
                     <p>Lorem ipsum dolor amet, tempor ut labore magna tempor dolore</p>
@@ -241,7 +241,7 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
                     </div>
                 </div>
                 <div class="col-md-4 item">
-                    <img src="assets/onepage/img/people/img7-large.jpg" alt="Elena Taylor" class="img-responsive">
+                    <img src="assets/onepage/img/people/shafiq.jpg" alt="Shafiq Izwan" class="img-responsive">
                     <h3>Shafiq Izwan</h3>
                     <em>Technical Manager / Lead Programmer</em>
                     <p>Lorem ipsum dolor amet, tempor ut labore magna tempor dolore</p>
@@ -252,7 +252,7 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
                     </div>
                 </div>
                 <div class="col-md-4 item">
-                    <img src="assets/onepage/img/people/img8-large.jpg" alt="Cris Nilson" class="img-responsive">
+                    <img src="assets/onepage/img/people/kimi.jpg" alt="Kimi" class="img-responsive">
                     <h3>Kimi</h3>
                     <em>Business Model Analyst / Web Developer</em>
                     <p>Lorem ipsum dolor amet, tempor ut labore magna tempor dolore</p>
