--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
                                         <i class="promo-like"> <img src="assets/onepage/img/Gold_Apple.png" height="75px" width="100px"></i>
                                         <div class="promo-like-text">
                                             <h2>Let's just do it</h2>
-                                            <p>This game still in development<br> will be release in a few  month<a href="javascript:void(0);"> #FRUPPLE </a></p>
+                                            <p>This game still in development<br> will be release soon.<a href="javascript:void(0);"> #FRUPPLE </a></p>
                                         </div>
                                     </div>
                                 </div>
@@ -139,9 +139,9 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
                         <div class="center-block-wrap">
                             <div class="center-block-body">
                                 <h3 class="margin-bottom-20 animate-delay carousel-title-v2" data-animation="animated fadeInDown">
-                                    99 little bugs in the code. <br/> Take one down, patch it around. <br/> 127 little bugs in the code.
+                                    Try our game. <br/>You will like it. <br/>
                                 </h3>
-                                <span class="carousel-subtitle-v1">-Hakimi-</span>
+                                <span class="carousel-subtitle-v1"></span>
                             </div>
                         </div>
                     </div>
@@ -162,22 +162,10 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
     <!-- About block BEGIN -->
     <div class="about-block content content-center" id="about">
         <div class="container">
-            <h2><strong>Metronic</strong> Inspires</h2>
-            <h4>Lorem ipsum dolor sit amet, consectetuer adipiscing elit</h4>
+            <h2>Game<strong>Play</strong></h2>
+            <h4>This game is a tapping game. Player need to tap apple to gain point before time running. Each apple have<br /> different point and colour. Aim for Yellow/Gold apple. Avoid tapping bomb and rotten apple.</h4>
             <div class="ab-trio">
-                <img src="assets/onepage/img/trio.png" alt="" class="img-responsive">
-                <div class="ab-cirlce ab-cirle-blue">
-                    <i class="fa fa-code"></i>
-                    <strong>Clean Code</strong>
-                </div>
-                <div class="ab-cirlce ab-cirle-red">
-                    <i class="fa fa-gift"></i>
-                    <strong>Huge Updates</strong>
-                </div>
-                <div class="ab-cirlce ab-cirle-green">
-                    <i class="fa fa-mobile"></i>
-                    <strong>Responsive</strong>
-                </div>
+                <img src="assets/onepage/img/trio3.png" alt="" class="img-responsive">
             </div>
         </div>
     </div>
@@ -187,27 +175,27 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
     <div class="services-block content content-center" id="services">
         <div class="container">
             <h2>Our <strong>services</strong></h2>
-            <h4>Lorem ipsum dolor sit amet, consectetuer adipiscing elit</h4>
+            <h4></h4>
             <div class="row">
                     <div class="col-md-3 col-sm-3 col-xs-12 item">
-                    <i class="fa fa-heart"></i>
-                    <h3>Fantastic Support</h3>
-                    <p>Lorem ipsum et dolor amet<br> consectetuer diam</p>
+                    <i class="fa fa-gamepad"></i>
+                    <h3>Game Development</h3>
+                    <p><br></p>
                 </div>
                 <div class="col-md-3 col-sm-3 col-xs-12 item">
                     <i class="fa fa-mobile"></i>
-                    <h3>Mobile Solutions</h3>
-                    <p>Lorem ipsum et dolor amet<br> consectetuer diam</p>
+                    <h3>Mobile Apps</h3>
+                    <p><br></p>
                 </div>
                 <div class="col-md-3 col-sm-3 col-xs-12 item">
-                    <i class="fa fa-signal"></i>
-                    <h3>Market Analysis</h3>
-                    <p>Lorem ipsum et dolor amet<br> consectetuer diam</p>
+                    <i class="fa fa-play"></i>
+                    <h3>Graphic Design</h3>
+                    <p><br></p>
                 </div>
                 <div class="col-md-3 col-sm-3 col-xs-12 item">
-                    <i class="fa fa-camera"></i>
-                    <h3>Photography</h3>
-                    <p>Lorem ipsum et dolor amet<br> consectetuer diam</p>
+                    <i class="fa fa-desktop"></i>
+                    <h3>Web Solutions</h3>
+                    <p><br></p>
                 </div>
             </div>
         </div>
@@ -235,7 +223,6 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
 					</section>
                     <h3>Faris</h3>
                     <em>Project Manager / Game Designer / 3D Artist</em>
-                    <p>Lorem ipsum dolor amet, tempor ut labore magna tempor dolore</p>
                     <div class="tb-socio">
                         <a href="https://www.facebook.com/permanent.system" target="_blank" class="fa fa-facebook"></a>
                         <a href="javascript:void(0);" class="fa fa-twitter"></a>
@@ -249,7 +236,6 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
 					</section>
                     <h3>Shafiq Izwan</h3>
                     <em>Technical Manager / Lead Programmer</em>
-                    <p>Lorem ipsum dolor amet, tempor ut labore magna tempor dolore</p>
                     <div class="tb-socio">
                         <a href="https://www.facebook.com/shafiqizwan2020" target="_blank" class="fa fa-facebook"></a>
                         <a href="javascript:void(0);" class="fa fa-twitter"></a>
@@ -262,7 +248,6 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
 					</section>
                     <h3>Hakimi</h3>
                     <em>Business Model Analyst / Web Developer</em>
-                    <p>Lorem ipsum dolor amet, tempor ut labore magna tempor dolore</p>
                     <div class="tb-socio">
                         <a href="https://www.facebook.com/harizhakimie" target="_blank" class="fa fa-facebook"></a>
                         <a href="javascript:void(0);" class="fa fa-twitter"></a>
@@ -280,7 +265,6 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
 					</section>
                     <h3>Amir Imran</h3>
                     <em>Business Model Analyst / Programmer</em>
-                    <p>Lorem ipsum dolor amet, tempor ut labore magna tempor dolore</p>
                     <div class="tb-socio">
                         <a href="https://www.facebook.com/amir.imran.mk" target="_blank" class="fa fa-facebook"></a>
                         <a href="javascript:void(0);" class="fa fa-twitter"></a>
@@ -427,11 +411,10 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
     <!-- Choose us block BEGIN -->
     <div class="choose-us-block content text-center margin-bottom-40" id="benefits">
         <div class="container">
-            <h2>Why to <strong>choose us</strong></h2>
-            <h4>Lorem ipsum dolor sit amet, <a href="javascript:void(0);">consectetuer adipiscing</a> elit, sed diam nonummy<br> nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</h4>
+            <h2>Why play <strong>our Game</strong></h2>
             <div class="row">
                 <div class="col-md-6 col-sm-6 col-xs-12 text-left">
-                    <img src="assets/onepage/img/choose-us.png" alt="Why to choose us" class="img-responsive">
+                    <img src="assets/onepage/img/Splashscreen2.png" alt="Why to choose us" class="img-responsive">
                 </div>
                 <div class="col-md-6 col-sm-6 col-xs-12 text-left">
                     <div class="panel-group" id="accordion1">
@@ -443,8 +426,8 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
                             </div>
                             <div id="accordion1_1" class="panel-collapse collapse in">
                                 <div class="panel-body">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim minim veniam quis nostrud exercitation dolore magna ullamco.</p>
-                                    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco sed eiusmod tempor ut labore et dolore.</p>
+                                    <p></p>
+                                    <p></p>
                                 </div>
                             </div>
                         </div>
@@ -456,8 +439,8 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
                             </div>
                             <div id="accordion1_2" class="panel-collapse collapse">
                                 <div class="panel-body">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim minim veniam quis nostrud exercitation dolore magna ullamco.</p>
-                                    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco sed eiusmod tempor ut labore et dolore.</p>
+                                    <p></p>
+                                    <p></p>
                                 </div>
                             </div>
                         </div>
@@ -469,8 +452,8 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
                             </div>
                             <div id="accordion1_3" class="panel-collapse collapse">
                                 <div class="panel-body">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim minim veniam quis nostrud exercitation dolore magna ullamco.</p>
-                                    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco sed eiusmod tempor ut labore et dolore.</p>
+                                    <p></p>
+                                    <p></p>
                                 </div>
                             </div>
                         </div>
@@ -482,8 +465,8 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
                             </div>
                             <div id="accordion1_4" class="panel-collapse collapse">
                                 <div class="panel-body">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim minim veniam quis nostrud exercitation dolore magna ullamco.</p>
-                                    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco sed eiusmod tempor ut labore et dolore.</p>
+                                    <p></p>
+                                    <p></p>
                                 </div>
                             </div>
                         </div>
@@ -495,8 +478,8 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
                             </div>
                             <div id="accordion1_5" class="panel-collapse collapse">
                                 <div class="panel-body">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim minim veniam quis nostrud exercitation dolore magna ullamco.</p>
-                                    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco sed eiusmod tempor ut labore et dolore.</p>
+                                    <p></p>
+                                    <p></p>
                                 </div>
                             </div>
                         </div>
@@ -508,8 +491,8 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
                             </div>
                             <div id="accordion1_6" class="panel-collapse collapse">
                                 <div class="panel-body">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim minim veniam quis nostrud exercitation dolore magna ullamco.</p>
-                                    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco sed eiusmod tempor ut labore et dolore.</p>
+                                    <p></p>
+                                    <p></p>
                                 </div>
                             </div>
                         </div>
@@ -531,7 +514,7 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
             <div class="row">
                 <div class="col-md-3 col-sm-3 col-xs-6">
                     <div class="item">
-                        <strong>80%</strong>
+                        <strong>100%</strong>
                         Projects Completed
                     </div>
                 </div>
@@ -549,8 +532,8 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
                 </div>
                 <div class="col-md-3 col-sm-3 col-xs-6">
                     <div class="item">
-                        <strong>0</strong>
-                        Weekly Sales
+                        <strong>100%</strong>
+                        Local
                     </div>
                 </div>
             </div>
@@ -564,6 +547,7 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
         <div class="container">
             <div class="row">
                 <div class="col-md-2 col-sm-3 col-xs-6">
+                    <img src="assets/onepage/img/partners/Frupple.png" alt="Frupple">
                 </div>
                 <div class="col-md-2 col-sm-3 col-xs-6">
                     <img src="assets/onepage/img/partners/UTM-Logo.png" alt="UTM">
