--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
                         <li><a href="#about">About</a></li>
                         <li><a href="#services">Services</a></li>
                         <li><a href="#team">Team</a></li>
-                        <li><a href="#portfolio">Portfolio</a></li>
+                        <li><a href="#portfolio">Screenshot</a></li>
                         <li><a href="#benefits">Benefits</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
@@ -108,14 +108,14 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
                         <div class="center-block-wrap">
                             <div class="center-block-body">
                                 <h2 class="margin-bottom-20 animate-delay carousel-title-v1" data-animation="animated fadeInDown">
-                                    <span class="color-red">Frupple</span> release soon
+                                    <span class="color-red">Frupple</span> Available Now
                                 </h2>
                                 <div class="animated flipInX">
                                     <div class="hidden-xs">
                                         <i class="promo-like"> <img src="assets/onepage/img/Gold_Apple.png" height="75px" width="100px"></i>
                                         <div class="promo-like-text">
                                             <h2>Let's just do it</h2>
-                                            <p>This game still in development<br> will be release soon.<a href="javascript:void(0);"> #FRUPPLE </a></p>
+                                            <p>The game is now available.<br>Please try it.<a href="javascript:void(0);"> #FRUPPLE </a></p>
                                         </div>
                                     </div>
                                 </div>
@@ -205,7 +205,7 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
     <!-- Message block BEGIN -->
     <div class="message-block content content-center valign-center" id="message-block">
         <div class="valign-center-elem">
-            <h2>In Progress <strong>Play Our Game Soon!</strong></h2>
+            <h2>Available <strong>Play Our Game Now!</strong></h2>
             <em>frupple team</em>
         </div>
     </div>
@@ -348,8 +348,8 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
                 <img src="assets/onepage/img/portfolio/7.jpg" alt="NAME" class="img-responsive">
                 <a href="assets/onepage/img/portfolio/7.jpg" class="zoom valign-center">
                     <div class="valign-center-elem">
-                        <strong>London City Project</strong>
-                        <em>Property</em>
+                        <strong>Game Over</strong>
+                        <em>Screenshot</em>
                         <b>Details</b>
                     </div>
                 </a>
@@ -358,8 +358,8 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
                 <img src="assets/onepage/img/portfolio/8.jpg" alt="NAME" class="img-responsive">
                 <a href="assets/onepage/img/portfolio/8.jpg" class="zoom valign-center">
                     <div class="valign-center-elem">
-                        <strong>London City Project</strong>
-                        <em>Property</em>
+                        <strong>Gameplay</strong>
+                        <em>Screenshot</em>
                         <b>Details</b>
                     </div>
                 </a>
@@ -368,8 +368,8 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
                 <img src="assets/onepage/img/portfolio/9.jpg" alt="NAME" class="img-responsive">
                 <a href="assets/onepage/img/portfolio/9.jpg" class="zoom valign-center">
                     <div class="valign-center-elem">
-                        <strong>London City Project</strong>
-                        <em>Property</em>
+                        <strong>Gameplay</strong>
+                        <em>Screenshot</em>
                         <b>Details</b>
                     </div>
                 </a>
@@ -378,8 +378,8 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
                 <img src="assets/onepage/img/portfolio/10.jpg" alt="NAME" class="img-responsive">
                 <a href="assets/onepage/img/portfolio/10.jpg" class="zoom valign-center">
                     <div class="valign-center-elem">
-                        <strong>London City Project</strong>
-                        <em>Property</em>
+                        <strong>Interface Background</strong>
+                        <em>Screenshot</em>
                         <b>Details</b>
                     </div>
                 </a>
@@ -388,8 +388,8 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
                 <img src="assets/onepage/img/portfolio/7.jpg" alt="NAME" class="img-responsive">
                 <a href="assets/onepage/img/portfolio/7.jpg" class="zoom valign-center">
                     <div class="valign-center-elem">
-                        <strong>London City Project</strong>
-                        <em>Property</em>
+                        <strong>Game Over</strong>
+                        <em>Screenshot</em>
                         <b>Details</b>
                     </div>
                 </a>
@@ -398,8 +398,8 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
                 <img src="assets/onepage/img/portfolio/8.jpg" alt="NAME" class="img-responsive">
                 <a href="assets/onepage/img/portfolio/8.jpg" class="zoom valign-center">
                     <div class="valign-center-elem">
-                        <strong>London City Project</strong>
-                        <em>Property</em>
+                        <strong>In Game</strong>
+                        <em>Screenshot</em>
                         <b>Details</b>
                     </div>
                 </a>
