--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
                         <li><a href="#about">About</a></li>
                         <li><a href="#services">Services</a></li>
                         <li><a href="#team">Team</a></li>
-                        <li><a href="#portfolio">Screenshot</a></li>
+                        <li><a href="#portfolio">Screenshots</a></li>
                         <li><a href="#benefits">Benefits</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
@@ -114,7 +114,7 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
                                     <div class="hidden-xs">
                                         <i class="promo-like"> <img src="assets/onepage/img/Gold_Apple.png" height="75px" width="100px"></i>
                                         <div class="promo-like-text">
-                                            <h2>Let's just do it</h2>
+                                            <h2>Tapping Game</h2>
                                             <p>The game is now available.<br>Please try it.<a href="javascript:void(0);"> #FRUPPLE </a></p>
                                         </div>
                                     </div>
@@ -163,7 +163,7 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
     <div class="about-block content content-center" id="about">
         <div class="container">
             <h2>Game<strong>Play</strong></h2>
-            <h4>This game is a tapping game. Player need to tap apple to gain point before time running. Each apple have<br /> different point and colour. Aim for Yellow/Gold apple. Avoid tapping bomb and rotten apple.</h4>
+            <h4>Tap the fruits. Avoid bombs. Each fruits have different points and colors. Aim for the highscore!</h4>
             <div class="ab-trio">
                 <img src="assets/onepage/img/trio3.png" alt="" class="img-responsive">
             </div>
@@ -188,13 +188,13 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
                     <p><br></p>
                 </div>
                 <div class="col-md-3 col-sm-3 col-xs-12 item">
-                    <i class="fa fa-play"></i>
-                    <h3>Graphic Design</h3>
+                    <i class="fa fa-desktop"></i>
+                    <h3>Web Solutions</h3>
                     <p><br></p>
                 </div>
                 <div class="col-md-3 col-sm-3 col-xs-12 item">
-                    <i class="fa fa-desktop"></i>
-                    <h3>Web Solutions</h3>
+                    <i class="fa fa-play"></i>
+                    <h3>Graphic Designs</h3>
                     <p><br></p>
                 </div>
             </div>
@@ -281,7 +281,7 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
     <!-- Portfolio block BEGIN -->
     <div class="portfolio-block content content-center" id="portfolio">
         <div class="container">
-            <h2 class="margin-bottom-50">Latest <strong>works</strong></h2>
+            <h2 class="margin-bottom-50">Screen<strong>shots</strong></h2>
         </div>
         <div class="row">
             <div class="item col-md-2 col-sm-6 col-xs-12">
@@ -411,7 +411,7 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
     <!-- Choose us block BEGIN -->
     <div class="choose-us-block content text-center margin-bottom-40" id="benefits">
         <div class="container">
-            <h2>Why play <strong>our Game</strong></h2>
+            <h2>Why play <strong>our Game?</strong></h2>
             <div class="row">
                 <div class="col-md-6 col-sm-6 col-xs-12 text-left">
                     <img src="assets/onepage/img/Splashscreen2.png" alt="Why to choose us" class="img-responsive">
@@ -586,10 +586,11 @@ Purchase Premium Metronic Admin Theme: http://themeforest.net/item/metronic-resp
                 <!-- END TWITTER BLOCK -->
                 <div class="col-md-4 col-sm-6 pre-footer-col">
                     <!-- BEGIN BOTTOM CONTACTS -->
-                    <h2>Our Contacts</h2>
+                    <h2>get In Touch</h2>
                     <address class="margin-bottom-20">
-                       Universiti Teknologi Malaysia<br>
-                        Skudai, Johor Bahru<br>
+                       Universiti Teknologi Malaysia, UTM Skudai,<br>
+                        81310 Johor Bahru,<br>
+                        Johor, Malaysia<br>
                         Phone: 300 323 3456<br>
                         Email: <a href="mailto:mharizahakimi2@live.utm.my">mharizhakimi2@live.utm.my</a><br />
                     </address>
